--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,23 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Open Source ApiHub for Developers."
     />
+    <meta name="title" content="SantechApi | ApiHub" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+    <meta name="keywords" content="API Hub, API Marketplace, API Directory, Developer Tools, Web Development APIs, Data Analysis APIs, Machine Learning APIs, RESTful APIs, JSON APIs, API Subscriptions, API Integration, API Documentation, API Discovery, Code Snippets, API Community">
+    <meta property="og:title" content="SantechApi | ApiHub">
+    <meta property="og:site_name" content="SantechApi">
+    <meta property="og:url" content=https://santechapihubs.vercel.app/home>
+    <meta property="og:description" content="Discover a world of powerful APIs at SantechApihub. Explore a wide range of APIs for various industries and purposes, including web development, data analysis, machine learning, and more. With our user-friendly interface, finding and integrating APIs into your projects has never been easier. Stay updated with the latest API releases and subscribe to your favorite APIs to unlock their full potential. Join SantechApihub today and supercharge your development process.">
+    <meta property="og:type" content=website>
+    <meta property="og:image" content=https://ik.imagekit.io/vituepzjm/SanTech%20Api.png>
+    <meta property="twitter:title" content="SantechApi | ApiHub">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:image" content=https://ik.imagekit.io/vituepzjm/SanTech%20Api.png>
+    <meta property="twitter:description" content="Discover a world of powerful APIs at SantechApihub. Explore a wide range of APIs for various industries and purposes, including web development, data analysis, machine learning, and more. With our user-friendly interface, finding and integrating APIs into your projects has never been easier. Stay updated with the latest API releases and subscribe to your favorite APIs to unlock their full potential. Join SantechApihub today and supercharge your development process.">
+    <link rel="canonical" href="https://santechapihubs.vercel.app/home">
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
    
@@ -20,21 +32,6 @@
   <body>
     <div id="root"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.globe.min.js" > </script>
-    <script>
-    VANTA.GLOBE({
-      el: "#live",
-      mouseControls: true,
-      touchControls: true,
-      gyroControls: false,
-      minHeight: 200.00,
-      minWidth: 200.00,
-      scale: 1.00,
-      scaleMobile: 1.00,
-      size: 2.00
-    })
-    </script>
     <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="f4f82b06-c69c-4253-86a5-9c1af2ec18e3";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   </body>
 </html>
