--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,15 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KK9MCRF9BS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KK9MCRF9BS');
+</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="f4f82b06-c69c-4253-86a5-9c1af2ec18e3";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   </body>
