--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <meta name="title" content="SantechApi | ApiHub" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="keywords" content="API Hub, API Marketplace, API Directory, Developer Tools, Web Development APIs, Data Analysis APIs, Machine Learning APIs, RESTful APIs, JSON APIs, API Subscriptions, API Integration, API Documentation, API Discovery, Code Snippets, API Community , SanTechApi ,SanTechApiHub">
     <meta property="og:title" content="SantechApi | ApiHub">
     <meta property="og:site_name" content="SantechApi">
